--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "7091020291:AAGSc0_C8Il3CZo3vnmmSJxFSpk7DwknLhE"                              # Require restart after changing it while bot running
 OWNER_ID = "5957500906"                               # Require restart after changing it while bot running
-TELEGRAM_API = "6"                           # Require restart after changing it while bot running
-TELEGRAM_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"                          # Require restart after changing it while bot running
+TELEGRAM_API = "2944318"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "e9746721493a910d201d898b4329da8f"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = "mongodb+srv://luffyx7819:R0xYGEYRui9e2ScP@cluster1.lyqtfz7.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
